--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "@next/third-parties": "^16.1.4",
+    "@notionhq/client": "^5.9.0",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
-    "next": "16.1.4",
+    "mermaid": "^11.12.2",
+    "next": "16.1.5",
     "next-themes": "^0.4.6",
-    "notion-client": "^7.7.3",
+    "notion-types": "^7.7.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-notion-x": "^7.7.3",
+    "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "eslint-config-prettier": "^10.1.8",
