--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "notion-types": "^7.7.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-force-graph-2d": "^1.29.1",
     "react-intersection-observer": "^10.0.2",
     "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0"
