--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@notionhq/client": "^5.9.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@vercel/kv": "^3.0.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "mermaid": "^11.12.2",
+    "nanoid": "^5.1.6",
     "next": "16.1.5",
     "next-themes": "^0.4.6",
     "notion-types": "^7.7.3",
