refactor(db): Migrate to @upstash/redis and centralize DB logic
Replaces the deprecated `@vercel/kv` package with `@upstash/redis` and restructures the database logic for better maintainability.

**Key Changes:**

- **Migration:**
  - Removed `@vercel/kv` and installed `@upstash/redis`.
  - Updated Redis client initialization to use `Redis.fromEnv()`.

- **Architecture:**
  - Created `src/lib/db/` directory to centralize database operations.
  - Separated logic into domain-specific modules: `client.ts`, `view.ts`, `comment.ts`.
  - Updated API routes (`/api/view`, `/api/comments`) to use the new DB modules.

- **Fixes:**
  - Added error logging in API routes to resolve ESLint `no-unused-vars` warnings.
  - Corrected import order in modified files according to project guidelines.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 NOTION_TOKEN=secret_...
 NOTION_DATA_SOURCE_ID=...
 NEXT_PUBLIC_GA_ID=G-...
-KV_REST_API_URL=https://...
-KV_REST_API_TOKEN=...
 ADMIN_PASSWORD=...
+
+# Vercel KV (Upstash Redis)
+KV_REST_API_URL="https://..."
+KV_REST_API_TOKEN="..."
+KV_REST_API_READ_ONLY_TOKEN="..."
+KV_URL="redis://..."
+REDIS_URL="redis://..."
