--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/third-parties": "^16.1.4",
     "@notionhq/client": "^5.9.0",
     "@radix-ui/react-slot": "^1.2.4",
-    "@vercel/kv": "^3.0.0",
+    "@upstash/redis": "^1.36.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
